--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="site de tai">
     <meta name="keywords" content="tai, netforce, hack, hacker, hacking, programação, programador, programar">
+    <meta name="author" content="João Sidharta e Luiza">
     <meta name="author" content="NetForce">
     <link rel="shortcut icon" href="./static/img/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="./static/css/bootstrap/bootstrap.css">
@@ -158,19 +159,11 @@
     <section id="sobrenos">
         <div class="container-fluid w-auto p-5 text-white">
             <h1>Quem somos?</h1>
-            <p><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum doloribus, laboriosam aliquid dolorem
-                    optio nostrum eos reiciendis iusto at labore eligendi. Hic, quos tenetur aliquam autem dolor
-                    corrupti voluptate laudantium!</span><span>Aliquid laudantium excepturi facere distinctio eveniet
-                    vel et ea iure maxime corrupti non quibusdam tenetur minima ratione aliquam quae vitae, culpa
-                    incidunt modi suscipit exercitationem doloremque. Sint soluta perspiciatis
-                    repudiandae?</span><span>Placeat delectus modi nam blanditiis eum temporibus ea ab at. Maxime, eum
-                    blanditiis adipisci officiis accusantium reiciendis vel omnis fugiat saepe? Hic dolore consequuntur
-                    maxime illo, distinctio unde accusamus explicabo.</span><span>Aliquid debitis deserunt porro quis
-                    dolores id atque magni laudantium dolorem sit veritatis facere quas temporibus autem, officiis
-                    molestiae. Vitae illum facilis dolor ab iure sint? Eius nostrum rerum cumque.</span><span>Quia
-                    voluptas officia deleniti eum culpa ducimus, excepturi debitis harum sint dolorum aliquid sunt, non
-                    doloribus fugiat ipsum nemo temporibus laudantium facere. Repudiandae veniam molestias nemo dicta
-                    possimus eveniet voluptas.</span></p>
+            <p>Bem-vindo ao site do NetForce! Somos uma equipe dedicada de profissionais que está comprometida em oferecer soluções excepcionais para nossos clientes. Com anos de experiência em nosso setor, temos orgulho de oferecer serviços e produtos de qualidade que atendem às necessidades de nossos clientes.</p>
+
+            <p>Aqui, você encontrará informações sobre quem somos, nossos produtos e serviços, nossa equipe e como podemos ajudá-lo a atender às suas necessidades. Também fornecemos recursos úteis e informações que ajudarão a informar e educar você sobre nosso setor e nossa empresa.</p>
+                
+            <p>Estamos empenhados em fornecer um atendimento ao cliente excepcional e estamos sempre disponíveis para responder a quaisquer perguntas ou preocupações que você possa ter. Navegue em nosso site para saber mais sobre o que oferecemos e como podemos ajudá-lo a alcançar seus objetivos. Obrigado por visitar nosso site e esperamos trabalhar com você em breve!</p>
         </div>
     </section>
     <!--fim do sobre nós-->
@@ -183,8 +176,8 @@
                 <li class="mb-5"><i class="fas fa-check text-success mr-2"></i>Sempre ganhar as partidas online, não importa se seu pc e uma batata.</li>
                 <li class="mb-5"><i class="fas fa-check text-success mr-2"></i>Conseguir items lendarios e pagos, sem precisar farmar durante 20 anos.</li>
                 <li class="mb-5"><i class="fas fa-check text-success mr-2"></i>Ser o melhor em qualquer jogo, mesmo que você seja horrivel.</li>
-                <li class="mb-5"><i class="fas fa-check text-success mr-2"></i>Benefício 4</li>
-                <li class="mb-5"><i class="fas fa-check text-success mr-2"></i>Benefício 5</li>
+                <li class="mb-5"><i class="fas fa-check text-success mr-2"></i>Nunca mais erre uma bala.</li>
+                <li class="mb-5"><i class="fas fa-check text-success mr-2"></i>Não passe mais rage por ser ruim.</li>
             </ul>
         </div>
     </section>
@@ -200,10 +193,7 @@
                     <img height="300px" src="./static/img/hackroblox.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title text-white">Items de graça</h5>
-                        <p class="card-text text-white">This is a longer card with supporting text below as a natural
-                            lead-in to
-                            additional
-                            content. This content is a little bit longer.</p>
+                        <p class="card-text text-white">Tenha todos os intens do jogo disponíveis para você.</p>
                         <p class="card-text text-white"><small class="text-muted">Last updated 3 mins ago</small></p>
                     </div>
                 </div>
@@ -211,22 +201,16 @@
                     <img height="300px" src="./static/img/ainmbot.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title text-white">Aimbot</h5>
-                        <p class="card-text text-white">This card has supporting text below as a natural lead-in to
-                            additional
-                            content.</p>
-                        <p class="card-text text-white"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        <p class="card-text text-white">Acerte todos os hs sem se preocupar em mirar.</p>
+                        <p class="card-text text-white"><small class="text-muted">Last updated 5 mins ago</small></p>
                     </div>
                 </div>
                 <div class="card bg-dark p-1">
                     <img height="300px" src="./static/img/dinheiro infinito.jpeg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title text-white">Dinheiro infinito</h5>
-                        <p class="card-text text-white">This is a wider card with supporting text below as a natural
-                            lead-in to
-                            additional
-                            content. This card has even longer content than the first to show that equal height action.
-                        </p>
-                        <p class="card-text text-white"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        <p class="card-text text-white">Para todos que cansaram de ser pobres.</p>
+                        <p class="card-text text-white"><small class="text-muted">Last updated 20 mins ago</small></p>
                     </div>
                 </div>
             </div>
@@ -235,33 +219,24 @@
                     <img height="300px" src="./static/img/godmod.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title text-white">Godmod</h5>
-                        <p class="card-text text-white">This is a longer card with supporting text below as a natural
-                            lead-in to
-                            additional
-                            content. This content is a little bit longer.</p>
-                        <p class="card-text text-white"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        <p class="card-text text-white">Vire o adm que sempre sonhou.</p>
+                        <p class="card-text text-white"><small class="text-muted">Last updated 30 mins ago</small></p>
                     </div>
                 </div>
                 <div class="card bg-dark p-1">
                     <img height="300px" src="./static/img/vidainfinita.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title text-white">Vida infinita</h5>
-                        <p class="card-text text-white">This card has supporting text below as a natural lead-in to
-                            additional
-                            content.</p>
-                        <p class="card-text text-white"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        <p class="card-text text-white">Sinta o gosto da imortalidade.</p>
+                        <p class="card-text text-white"><small class="text-muted">Last updated 40 mins ago</small></p>
                     </div>
                 </div>
                 <div class="card bg-dark p-1">
                     <img height="300px" src="./static/img/caos.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title text-white">Caos mode</h5>
-                        <p class="card-text text-white">This is a wider card with supporting text below as a natural
-                            lead-in to
-                            additional
-                            content. This card has even longer content than the first to show that equal height action.
-                        </p>
-                        <p class="card-text text-white"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        <p class="card-text text-white">Tire proveito do caos assistindo o mundo queimar.</p>
+                        <p class="card-text text-white"><small class="text-muted">Last updated 60 mins ago</small></p>
                     </div>
                 </div>
             </div>
@@ -272,49 +247,49 @@
     <!--comprar-->
     <section id="comprar">
         <div class="container-fluid p-0 m-0 mt-3 pt-3 mb-5 pt-5 w-100">
-            <h1 class="mb-3 text-center">Hacks de Jogos</h1>
+            <h1 class="mb-3 text-center text-white">Hacks de Jogos</h1>
             <div class="table-respnsive w-100">
                 <table class="table table-dark w-100">
                     <tbody>
                         <tr>
                             <td>Wallhack</td>
                             <td>Mostra as paredes, permitindo que você veja através delas.</td>
-                            <td><a href="#" class="btn btn-primary bg-dark text-white border">Comprar</a></td>
+                            <td><a href="indexsusto.html" class="btn btn-primary bg-dark text-white border">Comprar</a></td>
                         </tr>
                         <tr>
                             <td>Aimbot</td>
                             <td>Aponta automaticamente para os jogadores inimigos.</td>
-                            <td><a href="#" class="btn btn-primary bg-dark text-white border">Comprar</a></td>
+                            <td><a href="indexsusto.html" class="btn btn-primary bg-dark text-white border">Comprar</a></td>
                         </tr>
                         <tr>
                             <td>Speedhack</td>
                             <td>Permite que você se mova mais rapidamente do que o normal.</td>
-                            <td><a href="#" class="btn btn-primary bg-dark text-white border">Comprar</a></td>
+                            <td><a href="indexsusto.html" class="btn btn-primary bg-dark text-white border">Comprar</a></td>
                         </tr>
                         <tr>
                             <td>ESP</td>
                             <td>Mostra a localização de todos os jogadores inimigos.</td>
-                            <td><a href="#" class="btn btn-primary bg-dark text-white border">Comprar</a></td>
+                            <td><a href="indexsusto.html" class="btn btn-primary bg-dark text-white border">Comprar</a></td>
                         </tr>
                         <tr>
                             <td>God Mode</td>
                             <td>Torna você invencível, impossível de morrer.</td>
-                            <td><a href="#" class="btn btn-primary bg-dark text-white border">Comprar</a></td>
+                            <td><a href="indexsusto.html" class="btn btn-primary bg-dark text-white border">Comprar</a></td>
                         </tr>
                         <tr>
                             <td>Teleporte</td>
                             <td>Permite que você se teletransporte para qualquer lugar do mapa.</td>
-                            <td><a href="#" class="btn btn-primary bg-dark text-white border">Comprar</a></td>
+                            <td><a href="indexsusto.html" class="btn btn-primary bg-dark text-white border">Comprar</a></td>
                         </tr>
                         <tr>
                             <td>Chams</td>
                             <td>Torna os jogadores inimigos visíveis através de paredes.</td>
-                            <td><a href="#" class="btn btn-primary bg-dark text-white border">Comprar</a></td>
+                            <td><a href="indexsusto.html" class="btn btn-primary bg-dark text-white border">Comprar</a></td>
                         </tr>
                         <tr>
                             <td>Bunnyhop</td>
                             <td>Permite que você pule continuamente sem perder velocidade.</td>
-                            <td><a href="#" class="btn btn-primary bg-dark text-white border">Comprar</a></td>
+                            <td><a href="indexsusto.html" class="btn btn-primary bg-dark text-white border">Comprar</a></td>
                         </tr>
                     </tbody>
                 </table>
@@ -355,8 +330,6 @@
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-primary bg-dark text-white border">Save
-                                changes</button>
                         </div>
                     </div>
                 </div>
