--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
         <div class="h-100 w-100 d-flex justify-content-center align-items-center">
             <div class="text-center">
                 <div class="container w-100">
-                    <p class="display-2 text-white"><img src="./static/img/icon.png" alt="icone" width="100px">Net<strong>Force</strong></p>
+                    <p class="display-2 text-white"><img src="./static/img/icon.png" alt="icone"
+                            width="100px">Net<strong>Force</strong></p>
                 </div>
 
                 <button type="button" class="btn bg-dark text-white border" data-toggle="modal" data-target="#login">
@@ -159,11 +160,18 @@
     <section id="sobrenos">
         <div class="container-fluid w-auto p-5 text-white">
             <h1>Quem somos?</h1>
-            <p>Bem-vindo ao site do NetForce! Somos uma equipe dedicada de profissionais que está comprometida em oferecer soluções excepcionais para nossos clientes. Com anos de experiência em nosso setor, temos orgulho de oferecer serviços e produtos de qualidade que atendem às necessidades de nossos clientes.</p>
+            <p>Bem-vindo ao site do NetForce! Somos uma equipe dedicada de profissionais que está comprometida em
+                oferecer soluções excepcionais para nossos clientes. Com anos de experiência em nosso setor, temos
+                orgulho de oferecer serviços e produtos de qualidade que atendem às necessidades de nossos clientes.</p>
 
-            <p>Aqui, você encontrará informações sobre quem somos, nossos produtos e serviços, nossa equipe e como podemos ajudá-lo a atender às suas necessidades. Também fornecemos recursos úteis e informações que ajudarão a informar e educar você sobre nosso setor e nossa empresa.</p>
-                
-            <p>Estamos empenhados em fornecer um atendimento ao cliente excepcional e estamos sempre disponíveis para responder a quaisquer perguntas ou preocupações que você possa ter. Navegue em nosso site para saber mais sobre o que oferecemos e como podemos ajudá-lo a alcançar seus objetivos. Obrigado por visitar nosso site e esperamos trabalhar com você em breve!</p>
+            <p>Aqui, você encontrará informações sobre quem somos, nossos produtos e serviços, nossa equipe e como
+                podemos ajudá-lo a atender às suas necessidades. Também fornecemos recursos úteis e informações que
+                ajudarão a informar e educar você sobre nosso setor e nossa empresa.</p>
+
+            <p>Estamos empenhados em fornecer um atendimento ao cliente excepcional e estamos sempre disponíveis para
+                responder a quaisquer perguntas ou preocupações que você possa ter. Navegue em nosso site para saber
+                mais sobre o que oferecemos e como podemos ajudá-lo a alcançar seus objetivos. Obrigado por visitar
+                nosso site e esperamos trabalhar com você em breve!</p>
         </div>
     </section>
     <!--fim do sobre nós-->
@@ -173,9 +181,12 @@
         <div class="container py-5 text-white">
             <h2 class="text-center mb-4">Vantagens</h2>
             <ul class="list-unstyled">
-                <li class="mb-5"><i class="fas fa-check text-success mr-2"></i>Sempre ganhar as partidas online, não importa se seu pc e uma batata.</li>
-                <li class="mb-5"><i class="fas fa-check text-success mr-2"></i>Conseguir items lendarios e pagos, sem precisar farmar durante 20 anos.</li>
-                <li class="mb-5"><i class="fas fa-check text-success mr-2"></i>Ser o melhor em qualquer jogo, mesmo que você seja horrivel.</li>
+                <li class="mb-5"><i class="fas fa-check text-success mr-2"></i>Sempre ganhar as partidas online, não
+                    importa se seu pc e uma batata.</li>
+                <li class="mb-5"><i class="fas fa-check text-success mr-2"></i>Conseguir items lendarios e pagos, sem
+                    precisar farmar durante 20 anos.</li>
+                <li class="mb-5"><i class="fas fa-check text-success mr-2"></i>Ser o melhor em qualquer jogo, mesmo que
+                    você seja horrivel.</li>
                 <li class="mb-5"><i class="fas fa-check text-success mr-2"></i>Nunca mais erre uma bala.</li>
                 <li class="mb-5"><i class="fas fa-check text-success mr-2"></i>Não passe mais rage por ser ruim.</li>
             </ul>
@@ -254,42 +265,50 @@
                         <tr>
                             <td>Wallhack</td>
                             <td>Mostra as paredes, permitindo que você veja através delas.</td>
-                            <td><a href="indexsusto.html" class="btn btn-primary bg-dark text-white border">Comprar</a></td>
+                            <td><a href="indexsusto.html" class="btn btn-primary bg-dark text-white border">Comprar</a>
+                            </td>
                         </tr>
                         <tr>
                             <td>Aimbot</td>
                             <td>Aponta automaticamente para os jogadores inimigos.</td>
-                            <td><a href="indexsusto.html" class="btn btn-primary bg-dark text-white border">Comprar</a></td>
+                            <td><a href="indexsusto.html" class="btn btn-primary bg-dark text-white border">Comprar</a>
+                            </td>
                         </tr>
                         <tr>
                             <td>Speedhack</td>
                             <td>Permite que você se mova mais rapidamente do que o normal.</td>
-                            <td><a href="indexsusto.html" class="btn btn-primary bg-dark text-white border">Comprar</a></td>
+                            <td><a href="indexsusto.html" class="btn btn-primary bg-dark text-white border">Comprar</a>
+                            </td>
                         </tr>
                         <tr>
                             <td>ESP</td>
                             <td>Mostra a localização de todos os jogadores inimigos.</td>
-                            <td><a href="indexsusto.html" class="btn btn-primary bg-dark text-white border">Comprar</a></td>
+                            <td><a href="indexsusto.html" class="btn btn-primary bg-dark text-white border">Comprar</a>
+                            </td>
                         </tr>
                         <tr>
                             <td>God Mode</td>
                             <td>Torna você invencível, impossível de morrer.</td>
-                            <td><a href="indexsusto.html" class="btn btn-primary bg-dark text-white border">Comprar</a></td>
+                            <td><a href="indexsusto.html" class="btn btn-primary bg-dark text-white border">Comprar</a>
+                            </td>
                         </tr>
                         <tr>
                             <td>Teleporte</td>
                             <td>Permite que você se teletransporte para qualquer lugar do mapa.</td>
-                            <td><a href="indexsusto.html" class="btn btn-primary bg-dark text-white border">Comprar</a></td>
+                            <td><a href="indexsusto.html" class="btn btn-primary bg-dark text-white border">Comprar</a>
+                            </td>
                         </tr>
                         <tr>
                             <td>Chams</td>
                             <td>Torna os jogadores inimigos visíveis através de paredes.</td>
-                            <td><a href="indexsusto.html" class="btn btn-primary bg-dark text-white border">Comprar</a></td>
+                            <td><a href="indexsusto.html" class="btn btn-primary bg-dark text-white border">Comprar</a>
+                            </td>
                         </tr>
                         <tr>
                             <td>Bunnyhop</td>
                             <td>Permite que você pule continuamente sem perder velocidade.</td>
-                            <td><a href="indexsusto.html" class="btn btn-primary bg-dark text-white border">Comprar</a></td>
+                            <td><a href="indexsusto.html" class="btn btn-primary bg-dark text-white border">Comprar</a>
+                            </td>
                         </tr>
                     </tbody>
                 </table>
@@ -334,6 +353,7 @@
                     </div>
                 </div>
             </div>
+            <p class="mt-3 text-white">Autores: João Sidharta e Luiza</p>
             <p class="mt-3 text-white">© 2021 Copyright: NetForce</p>
         </div>
     </footer>
